yaml/3NextHop-ALB.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS 1st Project - Nexthop
###############################################################
###### 변수, 파라메터, 매핑, 컨디션
###############################################################
#파라메터
Parameters:
  ProjectName:
    Type: String
    Description: Project Name
    Default: NextHop
  RegionName:
    Type: String
    Description: Region Name

# #매핑
# Mappings:
#   CidrMap:
#     ap-northeast-2:
#     sa-east-1:

# #컨디션
# Conditions:

#리소스 시작
Resources:


###############################################################
###### ALB
###############################################################
#ALB 보안그룹
  WebAlbSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !ImportValue VpcId
      GroupDescription: !Sub "${AWS::Region} Web ALB Security Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-web-alb-sg"

# ALB
  WebAlb:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Name: !Sub "${ProjectName}-${RegionName}-web-alb"
      SecurityGroups:
        - !Ref WebAlbSg
      Subnets:
        - !ImportValue PubSn1Id
        - !ImportValue PubSn2Id

# ALB 타겟그룹
  WebAlbTg:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${ProjectName}-${RegionName}-web-alb-tg"
      Port: 80
      Protocol: HTTP
      HealthCheckPath: '/'
      HealthCheckIntervalSeconds: 10
      HealthyThresholdCount: 3
      UnhealthyThresholdCount: 3
      VpcId: !ImportValue VpcId
      Tags:
        - Key : Name
          Value : !Sub "${ProjectName}-${RegionName}-web-alb-tg"

# ALB 리스너
  WebAlbListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WebAlbTg
      LoadBalancerArn: !Ref WebAlb
      Port: 80
      Protocol: HTTP


###############################################################
###### OutPuts
###############################################################
Outputs:
  WebAlbTgArn:
    Description: The ARN of the ALB Target Group
    Value: !Ref WebAlbTg
    Export:
      Name: WebAlbTgArn
...
